fixata visibilità del biglietto in base al click sui pulsanti "genera" e "annulla"

--- a/style.css
+++ b/style.css
@@ -24,13 +24,10 @@ h2 {
     flex-wrap: wrap;
 }
 
-.open {
+.biglietto.open {
     display: block;
 }
 
-.close {
-    display: none;
-}
 
 
 .dati-top,
@@ -72,5 +69,6 @@ h3 {
 
 .biglietto {
     padding: 20px 0;
+    display: none;
 }
 
